Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10424

Fix race on not_admitted_reason in AdmissionController

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.0.0
    • Impala 4.0.0
    • Backend
    • None
    • ghx-label-5

    Description

      QueueNode::not_admitted_reason can be accessed concurrently by the coordinator thread that calls SubmitForAdmission and the admission control dequeue loop thread.

      Attachments

        Activity

          People

            twmarshall Thomas Tauber-Marshall
            twmarshall Thomas Tauber-Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: