IMPALA-10424: Fix race on not_admitted_reason in AdmissionController

QueueNode::not_admitted_reason can be accessed concurrently by the
coordinator thread that calls SubmitForAdmission and the admission
control dequeue loop thread.

This patch fixes this by ensuring that not_admitted_reason is only
accessed if 'admission_ctrl_lock_' is held.

Change-Id: Iacb3f37d8e1797c2b1d7bc32ba6368419e9ae444
Reviewed-on: http://gerrit.cloudera.org:8080/16926
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>